--- a/dom/book-reader/task.css
+++ b/dom/book-reader/task.css
@@ -19,11 +19,15 @@ body {
 }
 
 .book_bg-gray {
-  color: whitesmoke;
+  background: gray;
 }
 
-.book_bg-white {
-  color: white;
+/*.book_bg-white {
+  background: white;
+}*/
+
+.book_bg-black {
+  background: black;
 }
 
 .book__controls {
